--- a/styles.css
+++ b/styles.css
@@ -779,6 +779,7 @@ mark {
   align-items: flex-end;
   justify-content: center;
   transition: 0.3s;
+  flex: none;
 }
 .arrow-btn a:hover::after {
   transition: 0.3s;
@@ -815,6 +816,7 @@ mark {
   align-items: flex-end;
   justify-content: center;
   transition: 0.3s;
+  flex: none;
 }
 .arrow-btn.align-center a:hover::after {
   transition: 0.3s;
@@ -857,6 +859,7 @@ mark {
   justify-content: center;
   transition: 0.3s;
   transform: rotate(180deg);
+  flex: none;
 }
 .back-btn a:hover::before {
   transition: 0.3s;
@@ -895,6 +898,7 @@ mark {
   justify-content: center;
   transition: 0.3s;
   padding-bottom: 2px;
+  flex: none;
 }
 .external-btn a:hover::after {
   transition: 0.3s;
@@ -930,6 +934,7 @@ mark {
   align-items: flex-end;
   justify-content: center;
   transition: 0.3s;
+  flex: none;
 }
 .email-btn a:hover::after {
   transition: 0.3s;
@@ -966,6 +971,7 @@ mark {
   justify-content: center;
   transition: 0.3s;
   transform: rotate(90deg);
+  flex: none;
 }
 .scroll-btn a:hover::after {
   transition: 0.3s;
@@ -1032,6 +1038,7 @@ mark {
   left: 12px;
   background: #1E3EAF;
   border-radius: 100%;
+  flex: none;
 }
 .download-btn.circle a:hover {
   transition: 0.3s;
@@ -1064,6 +1071,7 @@ mark {
   align-items: flex-end;
   justify-content: center;
   transition: 0.3s;
+  flex: none;
 }
 .rich-text .arrow-btn a:hover::after {
   transition: 0.3s;
@@ -1100,6 +1108,7 @@ mark {
   align-items: flex-end;
   justify-content: center;
   transition: 0.3s;
+  flex: none;
 }
 .rich-text .arrow-btn.align-center a:hover::after {
   transition: 0.3s;
@@ -1154,6 +1163,7 @@ mark {
   justify-content: center;
   transition: 0.3s;
   padding-bottom: 2px;
+  flex: none;
 }
 .rich-text .external-btn a:hover::after {
   transition: 0.3s;
@@ -1188,6 +1198,7 @@ mark {
   align-items: flex-end;
   justify-content: center;
   transition: 0.3s;
+  flex: none;
 }
 .rich-text .email-btn a:hover::after {
   transition: 0.3s;
@@ -1253,6 +1264,7 @@ mark {
   left: 12px;
   background: #1E3EAF;
   border-radius: 100%;
+  flex: none;
 }
 .rich-text .download-btn.circle a:hover {
   transition: 0.3s;
@@ -3511,6 +3523,7 @@ footer.page-footer .footer-wrapper .footer-navigation h4 {
   align-items: flex-end;
   justify-content: center;
   transition: 0.3s;
+  flex: none;
 }
 .our-focus-item .row .col-12 .arrow-btn a:hover::after {
   transition: 0.3s;
